--- a/src/styles/var.css
+++ b/src/styles/var.css
@@ -9,6 +9,9 @@
   --step-3: clamp(1.944rem, 1.771rem + 0.8651vw, 2.4414rem);
   --step-4: clamp(2.3328rem, 2.0827rem + 1.2504vw, 3.0518rem);
   --step-5: clamp(2.7994rem, 2.4462rem + 1.7658vw, 3.8147rem);
+
+  --background-color: #242424;
+  --text-color: white;
 }
 
 /* Box sizing rules */
