testing out mobile view on homepage

--- a/src/styles/CourseWork.module.css
+++ b/src/styles/CourseWork.module.css
@@ -14,3 +14,12 @@
 h2, h3 {
   text-align: center;
 }
+
+@media (max-width: 934px) {
+  .CourseWork {
+    display: block;
+  }
+  .classList {
+    display: block;
+  }
+}
