--- a/src/styles/var.css
+++ b/src/styles/var.css
@@ -11,7 +11,9 @@
   --step-5: clamp(2.7994rem, 2.4462rem + 1.7658vw, 3.8147rem);
 
   --background-color: #242424;
+  --secondary-background-color: #2c3e50;
   --text-color: white;
+  --link-color: #e74c3c ;
 }
 
 /* Box sizing rules */
