fixed the margin on h2 for android apps

--- a/src/styles/AndroidApps.module.css
+++ b/src/styles/AndroidApps.module.css
@@ -1,10 +1,7 @@
-.AndroidApps {
-  height: 10%;
-}
-
 .container {
   background-color: var(--secondary-background-color);
   border-radius: 10px;
+  overflow: hidden;
 }
 
 .AndroidApps > * {
