--- a/src/styles/PDFEmbed.module.css
+++ b/src/styles/PDFEmbed.module.css
@@ -1,12 +1,14 @@
 .PDFEmbed {
+  display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   width: 100%;
   height: 100vh;
 }
 
 iframe {
-  height: 100%;
+  height: 100vh;
   width: 100%;
   border: none;
 }
@@ -14,5 +16,11 @@ iframe {
 @media (max-width: 934px) {
   .PDFEmbed {
     width: 93%;
+    height: auto;
+  }
+
+  iframe {
+    height: 90vh;
+    width: 100%;
   }
 }
