--- a/src/styles/Websites.module.css
+++ b/src/styles/Websites.module.css
@@ -23,6 +23,11 @@
   padding: .5em;
   border-radius: 10px;
   margin: 10px 10px 10px 0;
+  transition: background-color 0.3s ease;
+}
+
+.content a:hover {
+  background-color: var(--link-hover-color);
 }
 
 .content img {
@@ -45,5 +50,7 @@
 
   .content img {
     width: 100%;
+    height: 200px;
+    border-radius: 10px;
   }
 }
