--- a/src/styles/var.css
+++ b/src/styles/var.css
@@ -14,6 +14,7 @@
   --secondary-background-color: #2c3e50;
   --text-color: white;
   --link-color: #e74c3c ;
+  --link-hover-color: #c0392b;
 }
 
 /* Box sizing rules */
